--- a/pages/deserts.html
+++ b/pages/deserts.html
@@ -1,4 +1,4 @@
-<!-- For now, I only have one collection, although the page is already called 'collections'. It is prepared to have other possible collections added. -->
+
 
 <!DOCTYPE html>
 <html lang="en-US" class="collections">
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="./deserts.html">Deserts</a></li>
-                    <li><a href="./add-Recipe-deserts.html">Add a Recipe</a></li>
+                    <li><a href="./add-Recipe-deserts.html">Place an Order</a></li>
                 </ul>
             </nav>
         </div>
