--- a/pages/dishes.html
+++ b/pages/dishes.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="./dishes.html">Dishes</a></li>
-                    <li><a href="./add-Recipe-dishes.html">Add a Recipe</a></li>
+                    <li><a href="./add-Recipe-dishes.html">Place an Order</a></li>
                 </ul>
             </nav>
         </div>
