--- a/pages/special-ocasion-cakes.html
+++ b/pages/special-ocasion-cakes.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="./special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a href="./add-Recipe-special-ocasion-cakes.html">Add a Recipe</a></li>
+                    <li><a href="./add-Recipe-special-ocasion-cakes.html">Place an Order</a></li>
                 </ul>
             </nav>
         </div>
