--- a/pages/catering.html
+++ b/pages/catering.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="./catering.html">Catering</a></li>
-                    <li><a href="./add-Recipe-catering.html">Add a Recipe</a></li>
+                    <li><a href="./add-Recipe-catering.html">Place an Order</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +38,6 @@
         <article id="products">
             <h2 class="span-two">CATERING</h2>
             <nav class = "span-two">
-                <!-- Source: https://developer.mozilla.org/en-US/docs/Web/CSS/:checked#toggling_elements_with_a_hidden_checkbox -->
                 <!-- Accessibility problems. -->
                 <label class="toggle" for="toggle-btn" lang="en-US"><span>Table of Contents</span><span id="down-arrow">ˇ</span></label>
                 <input type="checkbox" id="toggle-btn"> 
@@ -57,7 +56,7 @@
                 <h3>Catering Possibility 1</h3>
                 <h4>Item No. 001</h4>
                 <p>
-                    Various vegetables, sushi, hams, sauces, drinks and more.
+                    Various vegetables, hams, sauces, drinks and more.
                     <img src="../images/Catering/Catering-01.jpg" alt="Catering-01">
                     Estimated Price: €0.00
                 </p>
