added comments to all the code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header >
-        <!-- Navigation bar with title -->
+        <!-- Main navigation for the website -->
         <div id="main-nav">
             <div>
                 <h1>Kaczorki Gotują</h1>
