--- a/pages/dishes.html
+++ b/pages/dishes.html
@@ -1,5 +1,3 @@
-<!-- For now, I only have one collection, although the page is already called 'collections'. It is prepared to have other possible collections added. -->
-
 <!DOCTYPE html>
 <html lang="en-US" class="collections">
 <head>
@@ -10,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Main navigation for the website -->
         <div id="main-nav2">
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
@@ -23,6 +22,7 @@
                 </ul>
             </nav>            
         </div>
+        <!-- Secondary navigation used to navigate to the order page and back -->
         <div id="secondary-nav">
             <nav>
                 <ul>
@@ -33,8 +33,10 @@
         </div>
     </header>
     <main>
+        <!-- Top page arrow -->
         <aside><a href="#"><p>^</p></a></aside>
-
+        
+        <!-- Page subtitle and navigation list for the products -->
         <article id="products">
             <h2 class="span-two">DISHES</h2>
             <nav class = "span-two">
@@ -53,98 +55,100 @@
 
 
 <!--============    Collection of products.    =============-->
-<section class = "no-box">
-    <h3>Kaczorki Gotują</h3>
-    <p>
-        <img src="../images/icons/Logo.png" alt="Logo">
-    </p>
-    <p class="note">&copy;Kaczorki Gotują</p>
-    <p class="note">All rights reserved.</p>
-</section>
+            <section class = "no-box">
+                <h3>Kaczorki Gotują</h3>
+                <p>
+                    <img src="../images/icons/Logo.png" alt="Logo">
+                </p>
+                <p class="note">&copy;Kaczorki Gotują</p>
+                <p class="note">All rights reserved.</p>
+            </section>
 
-<section id = "Entry_5" class="span-right">
-    <h3>Pierogi Ruskie</h3>
-    <h4>Item No. 005</h4>
-    <p>
-        With Potatos and Onion.
-        <img src="../images/Dishes/Dishes-01.jpg" alt="Dishes-01">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>
+            <section id = "Entry_5" class="span-right">
+                <h3>Pierogi Ruskie</h3>
+                <h4>Item No. 005</h4>
+                <p>
+                    With Potatos and Onion.
+                    <img src="../images/Dishes/Dishes-01.jpg" alt="Dishes-01">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>
 
-<section id = "Entry_6" class="span-two">
-    <h3>Bigos</h3>
-    <h4>Item No. 006</h4>
-    <p>
-        Sauerkraut.
-        <img src="../images/Dishes/Dishes-06.jpg" alt="Dishes-02">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>
+            <section id = "Entry_6" class="span-two">
+                <h3>Bigos</h3>
+                <h4>Item No. 006</h4>
+                <p>
+                    Sauerkraut.
+                    <img src="../images/Dishes/Dishes-06.jpg" alt="Dishes-02">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>
 
-<section id = "Entry_7">
-    <h3>Uszka</h3>
-    <h4>Item No. 007</h4>
-    <p>
-        Mushrooms.
-        <img src="../images/Dishes/Dishes-03.jpg" alt="Dishes-03">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>
+            <section id = "Entry_7">
+                <h3>Uszka</h3>
+                <h4>Item No. 007</h4>
+                <p>
+                    Mushrooms.
+                    <img src="../images/Dishes/Dishes-03.jpg" alt="Dishes-03">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>
 
-<section class = "no-box">
-    <h3>Kaczorki Gotują</h3>
-    <p>
-        <img src="../images/icons/Logo.png" alt="Logo">
-    </p>
-    <p class="note">&copy;Kaczorki Gotują</p>
-    <p class="note">All rights reserved.</p>
-</section>
+            <section class = "no-box">
+                <h3>Kaczorki Gotują</h3>
+                <p>
+                    <img src="../images/icons/Logo.png" alt="Logo">
+                </p>
+                <p class="note">&copy;Kaczorki Gotują</p>
+                <p class="note">All rights reserved.</p>
+            </section>
 
-<section id = "Entry_8" class="span-two">
-    <h3>Pierogi</h3>
-    <h4>Item No. 008</h4>
-    <p>
-        Sample Top Text.
-        <img src="../images/Dishes/Dishes-04.jpg" alt="Dishes-04">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>
+            <section id = "Entry_8" class="span-two">
+                <h3>Pierogi</h3>
+                <h4>Item No. 008</h4>
+                <p>
+                    Sample Top Text.
+                    <img src="../images/Dishes/Dishes-04.jpg" alt="Dishes-04">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>
 
-<section id = "Entry_9">
-    <h3>Barszcz Czerwony</h3>
-    <h4>Item No. 009</h4>
-    <p>
-        Beetroot.
-        <img src="../images/Dishes/Dishes-05.jpg" alt="Dishes-05">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>
+            <section id = "Entry_9">
+                <h3>Barszcz Czerwony</h3>
+                <h4>Item No. 009</h4>
+                <p>
+                    Beetroot.
+                    <img src="../images/Dishes/Dishes-05.jpg" alt="Dishes-05">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>
 
-<section id = "Entry_10">
-    <h3>Kluski Parowe</h3>
-    <h4>Item No. 010</h4>
-    <p>
-        With bigos and sauce.
-        <img src="../images/Dishes/Dishes-02.jpg" alt="Dishes-06">
-        Estimated Price: €0.00
-    </p>
-    <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
-</section>         
-</article>
+            <section id = "Entry_10">
+                <h3>Kluski Parowe</h3>
+                <h4>Item No. 010</h4>
+                <p>
+                    With bigos and sauce.
+                    <img src="../images/Dishes/Dishes-02.jpg" alt="Dishes-06">
+                    Estimated Price: €0.00
+                </p>
+                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+            </section>         
+        </article>
 
-<aside><a href="#"><p>^</p></a></aside>
-<div id="phone-up-button"><a href="#"><p>^</p></a></div>
-</main>
-<footer>
-<p>&copy;Kaczorki Gotują</p>
-<p>All rights reserved.</p>
-</footer>
+        <aside><a href="#"><p>^</p></a></aside>
+        <div id="phone-up-button"><a href="#"><p>^</p></a></div>
+    </main>
+
+    <!-- A footer containing copyrights -->
+    <footer>
+        <p>&copy;Kaczorki Gotują</p>
+        <p>All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
