--- a/pages/deserts.html
+++ b/pages/deserts.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en-US" class="collections">
 <head>
@@ -10,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Main navigation for the website -->
         <div id="main-nav3">
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
@@ -23,6 +22,7 @@
                 </ul>
             </nav>            
         </div>
+        <!-- Secondary navigation used to navigate to the order page and back -->
         <div id="secondary-nav">
             <nav>
                 <ul>
@@ -33,8 +33,10 @@
         </div>
     </header>
     <main>
+        <!-- Top page arrow -->
         <aside><a href="#"><p>^</p></a></aside>
 
+        <!-- Page subtitle and navigation list for the products -->
         <article id="products">
             <h2 class="span-two">DESERTS</h2>
             <nav class = "span-two">
@@ -207,6 +209,8 @@
         <aside><a href="#"><p>^</p></a></aside>
         <div id="phone-up-button"><a href="#"><p>^</p></a></div>
     </main>
+
+    <!-- A footer containing copyrights -->
     <footer>
         <p>&copy;Kaczorki Gotują</p>
         <p>All rights reserved.</p>
