Footnote changes for the products, added redirect button to contacts, new desciption in contacts and general quality of life improvements

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,13 +17,17 @@
                     <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact</a></li>
+                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <!-- Standard contacts -->
+        <div id="contact-info-box">
+            <p>Welcome to our contacts here you can contact us via our Email, Phone and or go to our Facebook page. Through these links you can place orders and find more of our products. You can also make speical requests (e.g for allergies or a different number for a cake!) </p>
+        </div>
+
         <address>
             <div>
                 <p>Email</p>
