--- a/pages/dishes.html
+++ b/pages/dishes.html
@@ -18,7 +18,7 @@
                     <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact</a></li>
+                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </nav>            
         </div>
@@ -70,9 +70,9 @@
                 <p>
                     With Potatos and Onion.
                     <img src="../images/Dishes/Dishes-01.jpg" alt="Dishes-01">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>
 
             <section id = "Entry_6" class="span-two">
@@ -81,9 +81,9 @@
                 <p>
                     Sauerkraut.
                     <img src="../images/Dishes/Dishes-06.jpg" alt="Dishes-02">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>
 
             <section id = "Entry_7">
@@ -92,9 +92,9 @@
                 <p>
                     Mushrooms.
                     <img src="../images/Dishes/Dishes-03.jpg" alt="Dishes-03">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>
 
             <section class = "no-box">
@@ -112,9 +112,9 @@
                 <p>
                     Sample Top Text.
                     <img src="../images/Dishes/Dishes-04.jpg" alt="Dishes-04">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>
 
             <section id = "Entry_9">
@@ -123,9 +123,9 @@
                 <p>
                     Beetroot.
                     <img src="../images/Dishes/Dishes-05.jpg" alt="Dishes-05">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>
 
             <section id = "Entry_10">
@@ -134,9 +134,9 @@
                 <p>
                     With bigos and sauce.
                     <img src="../images/Dishes/Dishes-02.jpg" alt="Dishes-06">
-                    Estimated Price: €0.00
+                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <p class="note">*Prices vary around the shown amount and are to be determined at purchase</p>
+                <a href="./contact.html"><button>Contact Us</button></a>
             </section>         
         </article>
 
