Fixed some generalities

--- a/pages/add-Recipe-catering.html
+++ b/pages/add-Recipe-catering.html
@@ -51,7 +51,7 @@
                 <h2>Select a Recipe</h2>
                 <label for= "language">Item Number</label>
                 <select id="languages" name="languages">
-                    <option value="">Choose an item</option>
+                    <option value="">-- Choose an item --</option>
                     <option value="en">Item No. 001 (Catering Possibility 1)</option>
                     <option value="en">Item No. 002 (Catering Possibility 2)</option>
                     <option value="en">Item No. 003 (Catering Possibility 3)</option>
@@ -95,7 +95,7 @@
                 <input id="content" type="file" accept=".txt, .docx, .doc, .pdf, .odt, .rtf, .tex, .wpd">
 
                 <label for="note">Extra Notes</label>
-                <input id="note" type="text">
+                <input placeholder="e.g Allergies, Different age on bithday cake, etc." id="note" type="text">
             </section>
             <input type="submit" id="submit" value="Submit">   
         </form>
