Nav bar fix for order pages

--- a/pages/add-Recipe-catering.html
+++ b/pages/add-Recipe-catering.html
@@ -17,7 +17,7 @@
                     <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact</a></li>
+                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </nav>            
         </div>            
