fixed nav arrow issue and contact button issue, started some in line js properites soon to be converted to a JS file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>            
         </div>
     </header>
-    <main>
+    <main class = "blurred-mains">
         <!-- Short description of the site -->
         <p>Welcome to Kazorki Gotunja. Our website is all to do with catering. Here you can find a wide variety food from Dishes to Special Ocasion Cakes and many more! If your interested in learning more please explore our webpage and for any inquires for ordering food please refer to our contacts page. Through these links you can find even more products we offer. Thank you very much for your visit to the site and enjoy everything we have to offer!</p>
     </main>
