--- a/pages/dishes.html
+++ b/pages/dishes.html
@@ -72,7 +72,11 @@
                     <img src="../images/Dishes/Dishes-01.jpg" alt="Dishes-01">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>
 
             <section id = "Entry_6" class="span-two">
@@ -83,7 +87,11 @@
                     <img src="../images/Dishes/Dishes-06.jpg" alt="Dishes-02">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>
 
             <section id = "Entry_7">
@@ -94,7 +102,11 @@
                     <img src="../images/Dishes/Dishes-03.jpg" alt="Dishes-03">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>
 
             <section class = "no-box">
@@ -114,7 +126,11 @@
                     <img src="../images/Dishes/Dishes-04.jpg" alt="Dishes-04">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>
 
             <section id = "Entry_9">
@@ -125,7 +141,11 @@
                     <img src="../images/Dishes/Dishes-05.jpg" alt="Dishes-05">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>
 
             <section id = "Entry_10">
@@ -136,7 +156,11 @@
                     <img src="../images/Dishes/Dishes-02.jpg" alt="Dishes-06">
                     *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
                 </p>
-                <a href="./contact.html"><button>Contact Us</button></a>
+                <div class = "button-container">
+                    <div class = "vertical-center-button">
+                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                    </div>
+                </div>
             </section>         
         </article>
 
