--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class = "blurred-mains">
         <!-- Standard contacts -->
         <div id="contact-info-box">
             <p>Welcome to our contacts here you can contact us via our Email, Phone and or go to our Facebook page. Through these links you can place orders and find more of our products. You can also make speical requests (e.g for allergies or a different number for a cake!) </p>
