--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./styles/Combined.css">
+    <script src="./js/Kaczorki-Gotują.js" defer></script>
 </head>
 <body>
     <header >
@@ -21,6 +22,8 @@
                     <li><a href="./pages/deserts.html">Deserts</a></li>
                     <li><a href="./pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a href="./pages/contact.html">Contact Us</a></li>
+                    <li><a href="./pages/contact.html">EN</a></li>
+                    <img src= "./images/icons/moon.png" id = "toggledark">
                 </ul>
             </nav>            
         </div>
