--- a/pages/catering.html
+++ b/pages/catering.html
@@ -48,11 +48,11 @@
                     <li><a href="#Entry_2">Catering Possibility 2</a></li>
                     <li><a href="#Entry_3">Catering Possibility 3</a></li>
                     <li><a href="#Entry_4">Gyros</a></li>
-             </ul>
+                </ul>
             </nav>
 
 
-<!--============    Collection of products.    =============-->
+<!----------------   Collection of products.    ------------------->
             <section id = "Entry_1">
                 <h3>Catering Possibility 1</h3>
                 <h4>Item No. 001</h4>
@@ -135,33 +135,3 @@
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
