--- a/pages/dishes.html
+++ b/pages/dishes.html
@@ -19,6 +19,7 @@
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a href="./pages/contact.html">EN</a></li>
                 </ul>
             </nav>            
         </div>
@@ -32,7 +33,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class = "product-page-mains">
         <!-- Top page arrow -->
         <aside><a href="#"><p>^</p></a></aside>
         
