--- a/pages/add-Recipe-deserts.html
+++ b/pages/add-Recipe-deserts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="collections add-recipe">
+<html lang="en-US" class="collections-add-recipe">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
