--- a/pages/special-ocasion-cakes.html
+++ b/pages/special-ocasion-cakes.html
@@ -19,7 +19,7 @@
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
-                    <li><a href="./pages/contact.html">EN</a></li>
+                    <li><a id="seventh" href="./pages/contact.html">EN</a></li>
                 </ul>
             </nav>            
         </div>
