small changes to the codebase and added js properties

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./styles/Combined.css">
-    <script src="./js/Kaczorki-Gotują.js" defer></script>
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <header >
@@ -22,14 +22,18 @@
                     <li><a href="./pages/deserts.html">Deserts</a></li>
                     <li><a href="./pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a href="./pages/contact.html">Contact Us</a></li>
-                    <li><a href="./pages/contact.html">EN</a></li>
+                    <div class = "lang">
+                        <a href="#" language='english' class="active">EN</a>
+                        <a href="#" language ='dutch'>NL</a>
+                        <a href="#" language ='polish'>PL</a>
+                    </div>
                 </ul>
             </nav>            
         </div>
     </header>
     <main class = "blurred-mains">
         <!-- Short description of the site -->
-        <p>Welcome to Kazorki Gotunja. Our website is all to do with catering. Here you can find a wide variety food from Dishes to Special Ocasion Cakes and many more! If your interested in learning more please explore our webpage and for any inquires for ordering food please refer to our contacts page. Through these links you can find even more products we offer. Thank you very much for your visit to the site and enjoy everything we have to offer!</p>
+        <p class = "description">Welcome to Kazorki Gotunja. Our website is all to do with catering. Here you can find a wide variety food from Dishes to Special Ocasion Cakes and many more! If your interested in learning more please explore our webpage and for any inquires for ordering food please refer to our contacts page. Through these links you can find even more products we offer. Thank you very much for your visit to the site and enjoy everything we have to offer!</p>
     </main>
     <footer>
         <!-- Footing with copyrights for integrity of content -->
