--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,11 @@
                     <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
-                    <li><a id="seventh" href="./pages/contact.html">EN</a></li>
+                    <div class = "lang">
+                        <a href="#" language='english' class="active">EN</a>
+                        <a href="#" language ='dutch'>NL</a>
+                        <a href="#" language ='polish'>PL</a>
+                    </div>
                 </ul>
             </nav>
         </div>
